After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 788329 - Clearing history inactivates reload button on old and new tabs
Clearing history inactivates reload button on old and new tabs
Status: RESOLVED FIXED
Product: epiphany
Classification: Core
Component: General
3.26.x
Other Linux
: Normal normal
: ---
Assigned To: Epiphany Maintainers
Epiphany Maintainers
Depends on:
Blocks:
 
 
Reported: 2017-09-29 10:50 UTC by Branko Grubic (bitlord)
Modified: 2017-09-29 15:54 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
header-bar: Don't disable navigation actions when history is cleared (2.40 KB, patch)
2017-09-29 15:54 UTC, Michael Catanzaro
committed Details | Review

Description Branko Grubic (bitlord) 2017-09-29 10:50:25 UTC
Hi,

I noticed that if you have few tabs open and clear history, reload button on any of those tabs is inactive, as well as on newly opened tabs after clearing history.

Steps to reproduce:
Open epiphany, have few tabs open, go to AppMenu (Web) -> History -> Clear all.
After this action reload button is inactive for all tabs, even if you open a new tab and load some url, it remains inactive.


I did put this bug in general component since I'm not sure is it directly related to history. 

Versions of epiphany, webkitgtk and gtk used:
epiphany-3.26.0-1.fc27.x86_64
webkitgtk4-2.18.0-2.fc27.x86_64
gtk3-3.22.21-1.fc27.x86_64
Comment 1 Michael Catanzaro 2017-09-29 15:53:59 UTC
The following fix has been pushed:
643b6f6 header-bar: Don't disable navigation actions when history is cleared
Comment 2 Michael Catanzaro 2017-09-29 15:54:03 UTC
Created attachment 360676 [details] [review]
header-bar: Don't disable navigation actions when history is cleared

There's no reason to do this. The history service is not needed for the
back/forward list to work properly, so no reason to disable back/forward
after clearing history. And it's disabling the stop/reload action, too,
which doesn't make any sense. Especially since  there is no code to ever
enable it again.