header-bar: Don't disable navigation actions when history is cleared

There's no reason to do this. The history service is not needed for the
back/forward list to work properly, so no reason to disable back/forward
after clearing history. And it's disabling the stop/reload action, too,
which doesn't make any sense. Especially since  there is no code to ever
enable it again.

https://bugzilla.gnome.org/show_bug.cgi?id=788329